--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="r6">
         <div class="r6-div-conteudo">
             <h2 class="escola-titulo">Sobre o Anime</h2>
-            <p class="escola-texto-um">udo sobre o universo de Naruto: listas, quizzes e artigos sobre o mundo ninja de Naruto Uzumaki. Tudo sobre o universo de Naruto.</p>
-            <p class="escola-texto-dois">Naruto" é uma série de mangá e anime criada por Masashi Kishimoto. A história é centrada em Naruto Uzumaki, um jovem ninja da vila fictícia de Konohagakure (Vila da Folha), que sonha em se tornar o Hokage, o líder e ninja mais forte da vila.</p>
+            <p class="escola-texto-um">Jujutsu Kaisen.</p>
+            <p class="escola-texto-dois">Itadori Yuuji, um estudante do colegial com uma capacidade física única, tem como rotina visitar seu avô que está hospitalizado. Porém, um dia, o selo de um "objeto amaldiçoado" escondido em sua escola é rompido, fazendo surgir criaturas assustadoras. Para salvar seus colegas ele parte em direção ao colégio, quando algo inesperado acontece...!</p>
         </div>
         <img class="Logo1.jpg" src="Logo1.jpg" alt="logo1.jpg">
     </section>
