--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="r6-div-conteudo">
             <h2 class="escola-titulo">Sobre o Anime</h2>
             <p class="escola-texto-um">Jujutsu Kaisen.</p>
-            <p class="escola-texto-dois">Itadori Yuuji, um estudante do colegial com uma capacidade física única, tem como rotina visitar seu avô que está hospitalizado. Porém, um dia, o selo de um "objeto amaldiçoado" escondido em sua escola é rompido, fazendo surgir criaturas assustadoras. Para salvar seus colegas ele parte em direção ao colégio, quando algo inesperado acontece...!</p>
+            <p class="escola-texto-dois">Itadori Yuuji, um estudante do colegial com uma capacidade física única, tem como rotina visitar seu avô que está hospitalizado. Porém, um dia, o selo de um "objeto amaldiçoado" escondido em sua escola é rompido, fazendo surgir criaturas assustadoras. Para salvar seus colegas ele parte em direção ao colégio, quando algo inesperado acontece...! Manga por Gege Akutami</p>
         </div>
         <img class="Logo1.jpg" src="Logo1.jpg" alt="logo1.jpg">
     </section>
@@ -31,8 +31,8 @@
         <div class="agentes-todos">
         <span></span>
         <div class="agente-div">
-            <img class="agente-imagem" src="Naruto.jpg" alt="foto Naruto">
-            <h3 class="agente-nome">Naruto</h3>
+            <img class="agente-imagem" src="Itadori Yuji.jpg" alt="foto Itadori">
+            <h3 class="agente-nome">Itadori Yuji</h3>
         </div>
         <div class="agente-div">
             <img class="agente-imagem" src="Hinata.jpg" alt="foto Hinata">
