--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
             <h3 class="agente-nome">Itadori Yuji</h3>
         </div>
         <div class="agente-div">
-            <img class="agente-imagem" src="Hinata.jpg" alt="foto Hinata">
-            <h3 class="agente-nome">Hinata</h3>
+            <img class="agente-imagem" src="Gojo Satoru.jpg" alt="foto gojo">
+            <h3 class="agente-nome">Gojo Satoru</h3>
         </div>
         <div class="agente-div">
-            <img class="agente-imagem" src="Kakashi.jpg" alt="foto Kakashi">
-            <h3 class="agente-nome">Kakashi</h3>
+            <img class="agente-imagem" src="megumi.jpg" alt="foto megumi">
+            <h3 class="agente-nome">Fushiguro Megumi</h3>
         </div>
         <span></span>
         <span></span>
         <div class="agente-div">
-            <img class="agente-imagem" src="Ino.jpg" alt="foto Ino">
-            <h3 class="agente-nome">Ino</h3>
+            <img class="agente-imagem" src="Nobara.jpg".jpg" alt="foto Nobara">
+            <h3 class="agente-nome">Kugisaki Nobara</h3>
             
         </div>
         <div class="agente-div">
-            <img class="agente-imagem" src="Sakura.jpg" alt="foto Sakura">
-            <h3 class="agente-nome">Sakura</h3>
+            <img class="agente-imagem" src="nanami.jpg" alt="foto Nanami">
+            <h3 class="agente-nome">Nanami Kento</h3>
             
         </div>
         <div class="agente-div">
