--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naruto</title>
+    <title>Jujutsu Kaisen</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
     <section class="r6">
         <div class="r6-div-conteudo">
             <h2 class="escola-titulo">Sobre o Anime</h2>
-            <p class="escola-texto-um">Jujutsu Kaisen.</p>
-            <p class="escola-texto-dois">Itadori Yuuji, um estudante do colegial com uma capacidade física única, tem como rotina visitar seu avô que está hospitalizado. Porém, um dia, o selo de um "objeto amaldiçoado" escondido em sua escola é rompido, fazendo surgir criaturas assustadoras. Para salvar seus colegas ele parte em direção ao colégio, quando algo inesperado acontece...! Manga por Gege Akutami</p>
+            <p class="escola-texto-um">Jujutsu Kaisen.</p>A história de Jujutsu Kaisen se passa em um universo em que a concentração de sentimentos negativos dá origem a Maldições — monstros perigosos, que pessoas comuns não conseguem enxergar. Nesse contexto, Itadori Yuji é um garoto que vive com seu avô e possui capacidade física além do normal. A força incomum do garoto não é explicada ao espectador,  e o protagonista, inclusive, prefere não a usar, participando do clube de ocultismo de sua escola secundária, em um dia encontra uma caixa qualquer e da as seus parceiros de clube, que planejavam abrir a noite na escola, no mesmo dia ele vai ate o hospital onde seu avô esta internado, com o seu falecimento, Itadori não participa do ritual, neste momento somos apresentados a um personagem que estava atrás do objeto amaldiçoado que Itadori estava, e diz que se for aberto todos os seus amigos iam morrer, Itadori leva o garoto apresentado a escola onde seus amigos estavam, e a energia esta pesada que entendia que tinhas maldições no local, lutas acontecem e sem opção, Itadori absorveu a maldição e ... .
+</p>
         </div>
         <img class="Logo1.jpg" src="Logo1.jpg" alt="logo1.jpg">
     </section>
