--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <img class="agente-imagem" src="Itadori Yuji.jpg" alt="foto Itadori">
             <h3 class="agente-nome">Itadori Yuji</h3>
         </div>
-        <div class="agente-div">
-            <img class="agente-imagem" src="Gojo Satoru.jpg" alt="foto gojo">
+        <div class=" <img class="agente-imagem" src="Gojo Satoru.jpg" alt="foto gojo">
             <h3 class="agente-nome">Gojo Satoru</h3>
         </div>
         <div class="agente-div">
